--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,84 +1,174 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500&display=swap');
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+  font-family: "Cinzel", serif;
 }
 
 :root {
-    --hue-neutral: 200;
-    --hue-wrong: 0;
-    --hue-correct: 145;
+ background-color: rgb(29,26,26);
 }
 
-body {
-    --hue: var(--hue-neutral);
-    padding: 0;
-    margin: 0;
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background-color: hsl(var(--hue), 100%, 20%);
+h1 {
+  font-size: 4.4rem;
+  color: white;
 }
 
-body.correct {
-    --hue: (var(--hue-correct));
-}
-
-body.wrong {
-    --hue: (var(var(--hue-wrong)));
+h2 {
+  font-size:2.5rem;
+  margin-bottom: 4rem;
 }
 
 .container {
-    width: 800px;
-    max-width: 80%;
-    background-color: white;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 0 0 10px 2px;
+  width: 100vw;
+  height: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 2rem;
 }
 
-.btn-grid {
-    display: grid;
-    gap: 10px;
-    margin: 20px 0;
+.flex-column {
+  display:flex;
+  flex-direction: column;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
 
 .btn {
-    --hue: var(--hue-neutral);
-    border: 1px solid hsl(var(--hue), 100%, 30%);
-    background-color: hsl(var(--hue), 100%, 50%);
-    border-radius: 5px;
-    padding: 5px 10px;
-    color: white;
-    outline: none;
-    width: 80%;
+  font-size: 2.4rem;
+  padding: 2rem 0;
+  width: 30rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  color: rgb(5, 4, 17);
+  background: linear-gradient(90deg, rgb(15, 91, 255) 0%,rgb(0,102,155)100%);
+  border-radius: 20px;
 }
 
 .btn:hover {
-    border-color: black;
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.4rem 0 rgb(0,114,244,0.6);
+  transition: transform 150ms;
+  transform: scale(1.03);
+}
+
+.btn[disabled]:hover {
+  cursor: not-allowed;
+  box-shadow: none;
+  transform: none;
+}
+
+#highscore-btn {
+  background: linear-gradient(90deg, rgb(215, 110, 19) 0%,rgb(255, 154, 45)100%)
+}
+
+#highscore-btn:hover {
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(211, 158, 12, 0.5);
+}
+/* 
+body {
+  
+  padding: 0;
+  margin: 0;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  
+  position: relative;
+}
+
+body.correct {
+  
+}
+
+body.wrong {
+  
+}
+
+.container {
+  width: 800px;
+  max-width: 80%;
+  background-color: white;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 0 10px 2px;
+}
+
+.header-container {
+  position: absolute;
+  justify-content: space-between;
+  top: 5px;
+  left: 6px;
+}
+
+.btn-grid {
+  display: grid;
+  gap: 10px;
+  margin: 20px 0;
+}
+
+.btn {
+  --hue: var(--hue-neutral);
+  border: 1px solid hsl(var(--hue), 100%, 30%);
+  background-color: hsl(var(--hue), 100%, 50%);
+  border-radius: 5px;
+  padding: 5px 10px;
+  color: white;
+  outline: none;
+  width: 80%;
+}
+
+.btn:hover {
+  border-color: black;
 }
 
 .btn.correct {
-    --hue: var(--hue-correct);
+  --hue: var(--hue-correct);
 }
 
 .btn.wrong {
-    --hue: var(--hue-wrong);
+  --hue: var(--hue-wrong);
 }
 
-.start-btn, .next-btn {
-    font-size: 1.5rem;
-    font-weight: bold;
-    padding: 10px 20px;
+.start-btn,
+.next-btn {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px 20px;
 }
 
 .controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hide {
-    display: none;
-}
+  display: none;
+} */
