--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 :root {
- background-color: rgb(29,26,26);
+ background-color: rgb(126, 85, 63);
 }
 
 h1 {
@@ -89,86 +89,3 @@ h2 {
 #highscore-btn:hover {
   box-shadow: 0 0.4rem 1.4rem 0 rgba(211, 158, 12, 0.5);
 }
-/* 
-body {
-  
-  padding: 0;
-  margin: 0;
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  
-  position: relative;
-}
-
-body.correct {
-  
-}
-
-body.wrong {
-  
-}
-
-.container {
-  width: 800px;
-  max-width: 80%;
-  background-color: white;
-  border-radius: 5px;
-  padding: 10px;
-  box-shadow: 0 0 10px 2px;
-}
-
-.header-container {
-  position: absolute;
-  justify-content: space-between;
-  top: 5px;
-  left: 6px;
-}
-
-.btn-grid {
-  display: grid;
-  gap: 10px;
-  margin: 20px 0;
-}
-
-.btn {
-  --hue: var(--hue-neutral);
-  border: 1px solid hsl(var(--hue), 100%, 30%);
-  background-color: hsl(var(--hue), 100%, 50%);
-  border-radius: 5px;
-  padding: 5px 10px;
-  color: white;
-  outline: none;
-  width: 80%;
-}
-
-.btn:hover {
-  border-color: black;
-}
-
-.btn.correct {
-  --hue: var(--hue-correct);
-}
-
-.btn.wrong {
-  --hue: var(--hue-wrong);
-}
-
-.start-btn,
-.next-btn {
-  font-size: 1.5rem;
-  font-weight: bold;
-  padding: 10px 20px;
-}
-
-.controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.hide {
-  display: none;
-} */
