fixed the error with the incorrect and correct answers and fixed the decrement time

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -89,3 +89,51 @@ h2 {
 #highscore-btn:hover {
   box-shadow: 0 0.4rem 1.4rem 0 rgba(211, 158, 12, 0.5);
 }
+
+.fa-crown {
+  font-size: 2.5rem;
+  margin-left: 1rem;
+}
+
+.end-form-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 30rem;
+}
+
+input {
+  margin-bottom: 1rem;
+  width: 20rem;
+  padding: 1.5rem;
+  font-size: 1.8rem;
+  border: none;
+  box-shadow:  0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5s);
+}
+
+input::placeholder {
+  color:#aaa;
+}
+
+#username {
+  margin-bottom: 3rem;
+  width: 100%;
+  outline: none;
+}
+
+#end-text {
+  font-size: 2.4rem;
+  color: #fff;
+  text-align: center;
+}
+
+#saveScoreBtn {
+  border: none;
+}
+
+@media screen and (max-width: 768px) {
+  .choice-container {
+      min-width: 40rem;
+  }
+}
