--- a/Assets/css/game.css
+++ b/Assets/css/game.css
@@ -34,7 +34,7 @@ body {
 }
 
 .incorrect {
-    background: linear-gradient(32deg, rgba(230,29,29,1) 0% rgb(224,11,11,1)100%);
+    background: linear-gradient(32deg, rgba(230,29,29,1) 0%, rgb(224,11,11,1)100%);
 }
 
 #hud {
@@ -67,8 +67,9 @@ body {
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
     .choice-container {
+        
         min-width: 40rem;
     }
 }
