--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -15,7 +15,7 @@
 }
 
 h1 {
-  font-size: 4.4rem;
+  font-size: 2rem;
   color: white;
 }
 
@@ -58,8 +58,8 @@ h2 {
 }
 
 .btn {
-  font-size: 2.4rem;
-  padding: 2rem 0;
+  font-size: 1.0rem;
+  padding: 1rem 0;
   width: 30rem;
   text-align: center;
   margin-bottom: 1rem;
@@ -88,11 +88,6 @@ h2 {
 
 #highscore-btn:hover {
   box-shadow: 0 0.4rem 1.4rem 0 rgba(211, 158, 12, 0.5);
-}
-
-.fa-crown {
-  font-size: 2.5rem;
-  margin-left: 1rem;
 }
 
 .end-form-container {
@@ -133,7 +128,14 @@ input::placeholder {
 }
 
 @media screen and (max-width: 768px) {
-  .choice-container {
-      min-width: 40rem;
+  #game {
+      max-width: 100%;
   }
+}
+
+@media screen and (min-width: 768px) {
+  #game {
+      min-width: 50%;
+  }
+
 }
